--- a/404.md
+++ b/404.md
@@ -1,9 +1,10 @@
 ---
-layout: page
+layout: default
 title: 404: Page Not Found
 permalink: 404.html
 ---
 
-# 404: Page Not Found
+#404: Page Not Found
 Sorry, this page may be dating with other.
+
 How about going back or finding other interesting in [homepage]({{ site.baseurl }}).
