--- a/404.md
+++ b/404.md
@@ -1,10 +1,8 @@
 ---
-layout: default
+layout: page
 title: 404: Page Not Found
 permalink: 404.html
 ---
-
-#404: Page Not Found
 
 Sorry, this page may be dating with other.
 
